--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,12 +13,11 @@
     <string name="speed_value_500ms">500 ms</string>
     <string name="speed_value_1s">1 secondo</string>
 
-    <string name="text_large">Le dimensioni sulla scala del tipo visualizzato dovrebbero mirare a fornire un contrasto di grande impatto tra le dimensioni evitando piccole differenze</string>
-    <string name="text_medium">Le seguenti unità vengono utilizzate per esprimere la dimensione del carattere su Android e sul Web</string>
-    <string name="text_small">I browser Web calcolano il REM</string>
-
-    <string name="header_small">Gioco della vita</string>
-    <string name="header_medium">Le seguenti unità servono per la spaziatura</string>
-    <string name="header_large">Il peso è l\'attributo principale che definisce lo spessore complessivo dei tratti di un carattere tipografico.</string>
+    <string name="onb_1_headline">Conway</string>
+    <string name="onb_1_description">\"Game of Life\" è una simulazione dell\'evoluzione degli automi cellulari, in cui ogni cellula sul tabellone segue semplici regole</string>
+    <string name="onb_2_headline">Regola 1</string>
+    <string name="onb_2_description">In una cella vuota (morta), se ci sono esattamente tre vicini viventi, nasce la vita</string>
+    <string name="onb_3_headline">Regola 2</string>
+    <string name="onb_3_description">Se una cellula vivente ha due o tre vicini viventi, continua a vivere; altrimenti la cellula muore (per “solitudine” o “sovraffollamento”)</string>
 
 </resources>
