--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -13,12 +13,11 @@
     <string name="speed_value_500ms">500毫秒</string>
     <string name="speed_value_1s">1秒</string>
 
-    <string name="text_large">渲染字体比例上的尺寸应旨在通过避免微小差异来提供尺寸之间有影响力的对比</string>
-    <string name="text_medium">以下单位用于表示 Android 和 Web 上的字体大小</string>
-    <string name="text_small">Web 浏览器计算 REM</string>
-
-    <string name="header_small">生命游戏</string>
-    <string name="header_medium">以下单位为间距</string>
-    <string name="header_large">粗细是定义字体笔画整体粗细的主要属性。</string>
+    <string name="onb_1_headline">康威的</string>
+    <string name="onb_1_description">“生命游戏”是细胞自动机进化的模拟，游戏板上的每个细胞都遵循简单的规则</string>
+    <string name="onb_2_headline">规则1</string>
+    <string name="onb_2_description">在空（死）细胞中，如果恰好有三个活着的邻居，生命就会诞生</string>
+    <string name="onb_3_headline">规则2</string>
+    <string name="onb_3_description">如果一个活细胞有两个或三个活的邻居，它就会继续活下去；否则，细胞就会死亡（由于“孤独”或“过度拥挤”）</string>
 
 </resources>
