--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
     <string name="Onboarding">Onboarding</string>
     <string name="drawer_GameOfLife_description">Game of life</string>
     <string name="drawer_Settings_description">Settings</string>
-    <string name="drawer_Onboarding_description">Onboarding</string>
+    <string name="drawer_Onboarding_description">Introduction</string>
 
     <string name="speed_value_100ms">100ms</string>
     <string name="speed_value_250ms">250ms</string>
     <string name="speed_value_500ms">500ms</string>
     <string name="speed_value_1s">1s</string>
+
+    <string name="start_game">Start game</string>
 
     <string name="onb_1_headline">Conway\'s</string>
     <string name="onb_1_description">"Game of Life" is a simulation of cellular automata evolution, where each cell on the game board follows simple rules</string>
