--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,6 +13,19 @@
     <string name="speed_value_500ms">500 ms</string>
     <string name="speed_value_1s">1s</string>
 
+    <string name="start_game">Démarrer jeu</string>
+    <string name="menu_button">Bouton de menu</string>
+    <string name="clear">Clair</string>
+    <string name="free_soul_mode">Mode âme gratuit</string>
+    <string name="emoji_mode">Mode émoji</string>
+    <string name="restart">Redémarrage</string>
+    <string name="stable_combination">Combinaison stable 🎉</string>
+    <string name="no_one_survived">Personne n\'a survécu 💀</string>
+    <string name="alive">Vivant</string>
+    <string name="deaths">Décès</string>
+    <string name="revivals">Réveils</string>
+    <string name="switch_running_simulation">Changer de simulation de course</string>
+
     <string name="onb_1_headline">de Conway</string>
     <string name="onb_1_description">\"Game of Life\" est une simulation de l\'évolution des automates cellulaires, où chaque cellule du plateau de jeu suit des règles simples</string>
     <string name="onb_2_headline">Règle 1</string>
