--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -13,6 +13,19 @@
     <string name="speed_value_500ms">500ms</string>
     <string name="speed_value_1s">1s</string>
 
+    <string name="start_game">Começar o jogo</string>
+    <string name="menu_button">Botão de menu</string>
+    <string name="clear">Claro</string>
+    <string name="free_soul_mode">Modo alma grátis</string>
+    <string name="emoji_mode">Modo emoji</string>
+    <string name="restart">Reiniciar</string>
+    <string name="stable_combination">Combinação estável 🎉</string>
+    <string name="no_one_survived">Ninguém sobreviveu 💀</string>
+    <string name="alive">Vivo</string>
+    <string name="deaths">Mortes</string>
+    <string name="revivals">Reavivamentos</string>
+    <string name="switch_running_simulation">Simulação de comutação em execução</string>
+
     <string name="onb_1_headline">Conway</string>
     <string name="onb_1_description">“Game of Life” é uma simulação da evolução de autômatos celulares, onde cada célula do tabuleiro segue regras simples</string>
     <string name="onb_2_headline">Regra 1</string>
