--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -13,6 +13,19 @@
     <string name="speed_value_500ms">500 mili giây</string>
     <string name="speed_value_1s">1 giây</string>
 
+    <string name="start_game">Bắt đầu trò chơi</string>
+    <string name="menu_button">Nút trình đơn</string>
+    <string name="clear">Thông thoáng</string>
+    <string name="free_soul_mode">Chế độ linh hồn tự do</string>
+    <string name="emoji_mode">Chế độ biểu tượng cảm xúc</string>
+    <string name="restart">Khởi động lại</string>
+    <string name="stable_combination">Sự kết hợp ổn định 🎉</string>
+    <string name="no_one_survived">Không ai sống sót 💀</string>
+    <string name="alive">Còn sống</string>
+    <string name="deaths">Tử vong</string>
+    <string name="revivals">Sự hồi sinh</string>
+    <string name="switch_running_simulation">Chuyển mô phỏng chạy</string>
+
     <string name="onb_1_headline">Conway\'s</string>
     <string name="onb_1_description">\"Trò chơi cuộc sống\" là mô phỏng quá trình tiến hóa tự động của tế bào, trong đó mỗi ô trên bảng trò chơi tuân theo các quy tắc đơn giản</string>
     <string name="onb_2_headline">Quy tắc 1</string>
