--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,16 @@
     <string name="switch_running_simulation">Switch running simulation</string>
 
     <string name="onb_1_headline">"Game of Life"</string>
-    <string name="onb_1_description">This is a simulation of cellular automata evolution devised by Dr. John Conway in 1970, where each cell on the game field follows simple rules</string>
+    <string name="onb_1_description">This is a simulation of cellular automata evolution devised by Dr. John Conway in
+        1970, where each cell on the game field follows simple rules
+    </string>
     <string name="onb_2_headline">Rule 1</string>
-    <string name="onb_2_description">In an empty (dead) cell, if there are exactly three living neighbors, life is born</string>
+    <string name="onb_2_description">In an empty (dead) cell, if there are exactly three living neighbors, life is
+        born
+    </string>
     <string name="onb_3_headline">Rule 2</string>
-    <string name="onb_3_description">If a living cell has two or three living neighbors, it continues to live; otherwise, the cell dies (due to "loneliness" or "overcrowding")</string>
+    <string name="onb_3_description">If a living cell has two or three living neighbors, it continues to live;
+        otherwise, the cell dies (due to "loneliness" or "overcrowding")
+    </string>
 
 </resources>
