--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
     <string name="deaths">Deaths</string>
     <string name="revivals">Revivals</string>
     <string name="switch_running_simulation">Switch running simulation</string>
+    <string name="set_field_dimensions">Set field dimensions</string>
+    <string name="rows">Rows</string>
+    <string name="columns">columns</string>
+
+
 
     <string name="onb_1_headline">"Game of Life"</string>
     <string name="onb_1_description">This is a simulation of cellular automata evolution devised by Dr. John Conway in
