update: settings page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="columns">columns</string>
     <string name="language">Language</string>
     <string name="change_theme">Change theme</string>
+    <string name="application">Application</string>
+    <string name="other">Other</string>
 
     <string name="onb_1_headline">Dr. John Conway</string>
     <string name="onb_1_description">Devised this simulation of cellular automata evolution in 1970, called the \"Game
