--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="other">Other</string>
     <string name="open_in_wikipedia">Open in wikipedia</string>
     <string name="JohnHortonConway">John Horton Conway</string>
-    <string name="JohnHortonConway_card_description">John Horton Conway, an English mathematician, has made significant
+    <string name="JohnHortonConway_card_description">English mathematician, has made significant
         contributions to finite groups, knot theory, number theory, combinatorial game theory, and coding theory.
         Notably, he is known for inventing the cellular automaton called the Game of Life in recreational mathematics
     </string>
